---
id: 32ebe867-fd1e-4736-a01e-b6dd7512fc13
title: Input Classes
description: |
  This diagram shows the input classes used in the glTF 2.0 specification.
  It includes the main classes and their relationships, as well as the
  extensions and plugins used in the specification.
config:
    layout: elk
    elk:
        mergeEdges: true
        nodePlacementStrategy: BRANDES_KOEPF
    theme: base
    themeVariables:
        darkMode: false
        darkModeBackground: "#000000"
        primaryColor: "#e0ffe0"
        primaryTextColor: "#000000"
        secondaryColor: "#f0d0ff"
        secondaryTextColor: "#0000ff"
        tertiaryColor: "#00ffff"
        tertiaryTextColor: "#00ff00"
        borderRadius: "0.25rem"
        fontSize: "1rem"
        fontFamily: "Arial, sans-serif"
        background: "#00ff00"
        lineColor: "#0000cc"
        nodeBorder: "#0000ff"
        noteColor: "#00ffff"
---
classDiagram

    note for BBuffer "Buffers hold the binary data arrays, such as vertices, attributes, and texture images."
    class ScopeName {
        <<enumeration>>
        ASSET: str
        PRIMITIVE: str
        MESH: str
        NODE: str
        BUFFER_VIEW: str
        ACCESSOR: str
        ACCESSOR_INDEX: str
        BUFFER: str
        BUILDER: str
        IMAGE: str
        MATERIAL: str
        TEXTURE: str
        CAMERA: str
        SAMPLER: str
        SKIN: str
        SCENE: str
        EXTENSION: str
        ANIMATION: str
        ANIMATION_CHANNEL: str
        ANIMATION_SAMPLER: str
    }

    class _Compilable {
        <<interface>>
        _entity_type: EntityType
        -name: str
        -extensions: ExtensionsData
        -extras: ExtrasData
        -extension_objects: set[Extension]
        +name_scope: bool
        +view_scope: bool
        +state_type(): type[_STATE]
    }

    class Builder {
        -index_size: Optional[IndexSize]
        -name_policy: Optional[NamePolicy]
        -extras: Optional[dict]
        -extensions: Optional[dict]
        +build(): gltf.GLTF2
    }

    class _NodeContainerProtocol {
        <<interface>>
        +__len__(): int
        +__getitem__(name: str): BNode
        +__setitem__(name: str, node: BNode)
        +__contains__(name: str): bool
        +__iter__(): Iterable[BNode]
    }

    class _GlobalShared {
        <<interface>>
    }

    class Entity {
        <<interface>>
    }

    class Plugin {
        +name: str
        +version: str
        semver: Version
        +author: str
        summary: str
        requiresPython: Version
    }
    class Extension {
        +name: str
        +compile_*(...)
    }
    Extension --> Plugin : plugin
    Plugin *--> ExtensionClass : extension_class
    Extension --|> ExtensionClass

    _NodeContainer <|-- Builder
    _GlobalShared <|-- Builder
    _NodeContainerProtocol <|-- _NodeContainer
    _NodeContainerProtocol <|-- _GlobalShared
    _GlobalShared <|-- _CurrentConfiguration

    _Compilable <|-- Entity
    Entity <|-- BNode
    Entity <|-- BBuffer
    Entity <|-- BBufferView
    Entity <|-- BAccessor
    Entity <|-- BTexture
    Entity <|-- BImage
    Entity <|-- BSampler
    Entity <|-- BMaterial
    Entity <|-- BMesh
    Entity <|-- BCamera
    Entity <|-- BScene
    Entity <|-- BSkin
    Entity <|-- BAnimation
    Entity <|-- BAnimationChannel
    Entity <|-- BAnimationSampler
    Entity <|-- Extension

    BSkin --> "1" BNode : skeleton
    BSkin --> "*" BNode : joints
    BSkin *--> "0..1" BAccessor : inverseBindMatrices

    BTexture --> BImage : source
    BTexture --> BSampler : sampler

    BMaterial --> "0..1" BTexture : baseColorTexture
    BMaterial --> "0..1" BTexture : metallicRoughnessTexture
    BMaterial --> "0..1" BTexture : normalTexture
    BMaterial --> "0..1" BTexture : occlusionTexture
    BMaterial --> "0..1" BTexture : emissiveTexture

    class BMesh:::User
    class BScene:::User
    class BNode:::User
    class BCamera:::User
    class BBuffer:::User
    class BBufferView:::User
    class BAccessor:::User
    class BTexture:::User
    class BImage:::User
    class BSampler:::User
    class BMaterial:::User
    class BSkin:::User
    class BAnimation:::User
    class BAnimationChannel:::User
    class BAnimationSampler:::User
    class Extension:::User
    class Builder:::User

    _NodeContainerProtocol <|-- BNode
    BNode "1" -- "*" BNode : nodes, parent
    BScene "*" o--> "*" BNode : nodes

    BNode o--> "0..1" BCamera : camera

    BNode "1" *--> "0..1" BMesh : mesh
    BMesh "1" *--> "0..1" BPrimitive : primitives
    BMesh "1" *--> "0..1" BAccessor : weights

    BPrimitive --> "0..1" BMaterial : material
    BPrimitive o--> "0..1" BAccessor : indices

    BAccessor --> BBufferView : bufferview

    BBufferView --> BBuffer : buffer

    BPrimitive --> "0..1" BMaterial : material

    BImage "1" *--> "1" BBufferView : bufferView

    BAnimationChannel --> BSampler : sampler
    BAnimationChannel --> BNode : target

    BAnimation --> "*" BAnimationChannel : channels
    BAnimation --> "*" BAnimationSampler : samplers


    classDef User fill:#ffe0ff,stroke:#0a2,stroke-width:2px;

